--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,10 +2,156 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting langchain-community\n",
+      "  Downloading langchain_community-0.3.1-py3-none-any.whl.metadata (2.8 kB)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (6.0.1)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (2.0.35)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (3.9.3)\n",
+      "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain-community)\n",
+      "  Using cached dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
+      "Requirement already satisfied: langchain<0.4.0,>=0.3.1 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (0.3.1)\n",
+      "Requirement already satisfied: langchain-core<0.4.0,>=0.3.6 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (0.3.8)\n",
+      "Requirement already satisfied: langsmith<0.2.0,>=0.1.125 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (0.1.130)\n",
+      "Requirement already satisfied: numpy<2,>=1 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (1.26.3)\n",
+      "Collecting pydantic-settings<3.0.0,>=2.4.0 (from langchain-community)\n",
+      "  Downloading pydantic_settings-2.5.2-py3-none-any.whl.metadata (3.5 kB)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (2.31.0)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<9.0.0,>=8.1.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-community) (8.2.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.9.4)\n",
+      "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
+      "  Using cached marshmallow-3.22.0-py3-none-any.whl.metadata (7.2 kB)\n",
+      "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
+      "  Using cached typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Requirement already satisfied: langchain-text-splitters<0.4.0,>=0.3.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain<0.4.0,>=0.3.1->langchain-community) (0.3.0)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain<0.4.0,>=0.3.1->langchain-community) (2.9.2)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.6->langchain-community) (1.33)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.6->langchain-community) (23.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.6->langchain-community) (4.12.2)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (0.27.2)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (3.10.7)\n",
+      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (1.0.0)\n",
+      "Requirement already satisfied: python-dotenv>=0.21.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain-community) (1.0.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langchain-community) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langchain-community) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langchain-community) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langchain-community) (2023.11.17)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain-community) (3.0.3)\n",
+      "Requirement already satisfied: anyio in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (4.6.0)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (1.0.6)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (1.3.1)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (0.14.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.6->langchain-community) (3.0.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.1->langchain-community) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.23.4 in c:\\users\\shashank\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.1->langchain-community) (2.23.4)\n",
+      "Collecting mypy-extensions>=0.3.0 (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
+      "  Using cached mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Downloading langchain_community-0.3.1-py3-none-any.whl (2.4 MB)\n",
+      "   ---------------------------------------- 0.0/2.4 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 0.3/2.4 MB ? eta -:--:--\n",
+      "   ----------------- ---------------------- 1.0/2.4 MB 4.2 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 1.6/2.4 MB 3.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.4/2.4 MB 3.2 MB/s eta 0:00:00\n",
+      "Using cached dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
+      "Downloading pydantic_settings-2.5.2-py3-none-any.whl (26 kB)\n",
+      "Using cached marshmallow-3.22.0-py3-none-any.whl (49 kB)\n",
+      "Using cached typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
+      "Using cached mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
+      "Installing collected packages: mypy-extensions, marshmallow, typing-inspect, pydantic-settings, dataclasses-json, langchain-community\n",
+      "Successfully installed dataclasses-json-0.6.7 langchain-community-0.3.1 marshmallow-3.22.0 mypy-extensions-1.0.0 pydantic-settings-2.5.2 typing-inspect-0.9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install langchain-community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KEY=os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=KEY, model_name=\"gpt-3.5-turbo\", temperature=0.5)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +161,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
